Actions
Bug #20988
closedString literal that includes `\C-` `\M-` with `\111` wrongly parsed
Bug #20988:
String literal that includes `\C-` `\M-` with `\111` wrongly parsed
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.5.0dev (2024-12-27T07:27:30Z master adbbc9109e) +YJIT +MN +PRISM [arm64-darwin22]
Updated by nobu (Nobuyoshi Nakada) over 1 year ago
- Status changed from Open to Closed
Applied in changeset git|a33c944ba8a0580322ee77b3066755f8e2c1c9b1.
[Bug #20988] [prism] Fix escaped octal character literals
Actions