[Bug #20988] [prism] Fix escaped octal character literals